Changes in @NEW@:
  o Bug Fixes:
    * Multiple entitlements to the same host name are now properly
      handled. (CNY-2105)
    * The URL sent via prepareChangeSet now matches the one used by
      commitChangeSet.

Changes in 1.1.31.8:
  o Bug Fixes:
    * Schema migration for the Latest table now correctly handles
      branches that end in redirects. (CNY-2081)
    * The client is now properly computing the downloaded file's
      digest if a size limit was specified. (CNY-2072)
    * Adding a large number of user maps is now more efficient
      if the new addServerGlobs method is used. (CNY-2083)

Changes in 1.1.31.7:
  o Bug Fixes:
    * Related to CNY-2034, Conary proxies are now properly computing
      the return URL. (CNY-2069)
    * includeConfigFile now sorts files that are matched in globs

Changes in 1.1.31.6:
  o Bug Fixes:
    * An issue related to Conary proxies running in non-SSL mode,
      talking to SSL-enabled repository servers has been fixed.
      (CNY-2067)

Changes in 1.1.31.5:
  o Server Changes
    * A bug which triggered an exception while migrating postgresql
      repositories has been fixed. (CNY-1912)
    * The getNewTroveInfo call works faster for mirror operations.
      (CNY-2006)
    * An issue that prevented the server from responding with the
      proper error message when in maintenance mode has been fixed.
      (CNY-2005)
    * An issue that was affecting cooking performance when looking
      up path IDs has been fixed. (CNY-1996)
    * URLs returned by prepareChangeSet, getChangeSet, and
      getFileContents are all based on the URL the client used to call
      the repository instead of built internally by the repository.
      (CNY-2034)
    * An issue that was preventing the repository server, under certain
      circumstances, to determine the proper URL to use has been fixed.
      (CNY-2056, CNY-2058)
    * External entitlement servers can now specify per-entitlement