@@ -1,4 +1,3 @@
-#
 # Copyright (c) 2007 rPath, Inc.
 #
 # This program is distributed under the terms of the Common Public License,
@@ -104,7 +103,7 @@ class ProxyCallFactory:
     @staticmethod
     def createCaller(protocol, port, rawUrl, proxies, authToken, localAddr,
                      protocolString, headers, cfg, targetServerName,
-                     remoteIp, isSecure):
+                     remoteIp, isSecure, baseUrl):
         entitlementList = authToken[2][:]
         entitlementList += cfg.entitlement.find(targetServerName,
                                                 allMatches = True)
@@ -178,11 +177,11 @@ class RepositoryCallFactory:
 
     def createCaller(self, protocol, port, rawUrl, proxies, authToken,
                      localAddr, protocolString, headers, cfg,
-                     targetServerName, remoteIp, isSecure):
+                     targetServerName, remoteIp, isSecure, baseUrl):
         if 'via' in headers:
             self.log(2, "HTTP Via: %s" % headers['via'])
         return RepositoryCaller(protocol, port, authToken, self.repos,
-                                remoteIp, rawUrl, isSecure)
+                                remoteIp, baseUrl, isSecure)
 
 class BaseProxy(xmlshims.NetworkConvertors):
 
@@ -244,7 +243,8 @@ class BaseProxy(xmlshims.NetworkConvertors):
                                                localAddr, protocolString,
                                                headers, self.cfg,
                                                targetServerName,
-                                               remoteIp, isSecure)
+                                               remoteIp, isSecure,
+                                               self.urlBase())
 
         try:
             if hasattr(self, methodname):
