@@ -4,6 +4,8 @@ Changes in @NEW@:
       handled. (CNY-2105)
     * The URL sent via prepareChangeSet now matches the one used by
       commitChangeSet.
+    * The URL sent back to the client is correct when connecting
+      through an HTTP proxy. (CNY-2117)
 
 Changes in 1.1.31.8:
   o Bug Fixes:
